# leaders_yakutiya

./: .env  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/core/: app_factory.py  db.py  settings.py
frontend/: Dockerfile  package-lock.json  package.json
